hphp/hack/test/typecheck/parent_abstract_call.php.exp
File "parent_abstract_call.php", line 9, characters 12-24:
Cannot call parent::XYZ(); it is abstract (Typing[4073])
File "parent_abstract_call.php", line 4, characters 28-30:
Declaration is here
